@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2007,v 1.1425 2007/06/19 22:23:58 bouyer Exp $
+$NetBSD: CHANGES-2007,v 1.1426 2007/06/20 16:18:36 jlam Exp $
 
 Changes to the packages collection and infrastructure in 2007:
 
@@ -2648,3 +2648,4 @@ Changes to the packages collection and infrastructure in 2007:
 	Added pkgtools/pbulk version 0.1 [root 2007-06-19]
 	Updated shells/mksh to 29.6 [joerg 2007-06-19]
 	Updated sysutils/apcupsd to 3.14.1nb2 [bouyer 2007-06-20]
+	Updated sysutils/install-sh to 20070620 [jlam 2007-06-20]
